--- a/proj.win32/Snake.vcxproj.filters
+++ b/proj.win32/Snake.vcxproj.filters
@@ -36,6 +36,9 @@
     <ClCompile Include="..\Classes\SnakeTailPart.cpp">
       <Filter>Classes</Filter>
     </ClCompile>
+    <ClCompile Include="..\Classes\SmartRes.cpp">
+      <Filter>Classes</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="main.h">
@@ -72,6 +75,9 @@
       <Filter>Classes</Filter>
     </ClInclude>
     <ClInclude Include="..\Classes\SnakeTailPart.h">
+      <Filter>Classes</Filter>
+    </ClInclude>
+    <ClInclude Include="..\Classes\SmartRes.h">
       <Filter>Classes</Filter>
     </ClInclude>
   </ItemGroup>
