--- a/proj.win32/Snake.vcxproj.filters
+++ b/proj.win32/Snake.vcxproj.filters
@@ -36,6 +36,12 @@
     <ClCompile Include="..\Classes\SmartRes.cpp">
       <Filter>Classes</Filter>
     </ClCompile>
+    <ClCompile Include="..\Classes\ICellEntity.cpp">
+      <Filter>Classes</Filter>
+    </ClCompile>
+    <ClCompile Include="..\Classes\SnakeConstants.cpp">
+      <Filter>Classes</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="main.h">
